// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MobileDocumentTechnicalTableResults component Renders correctly when multiple documents are present for asset types 1`] = `
<body>
  <div>
    <div
      class="css-1blc44m"
    >
      <div
        class=" css-1u48ai"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-q3x8p3-MuiPaper-root-MuiAccordion-root"
          data-testid="tech-table-accordion-item-product-base-code"
        >
          <div
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot MuiAccordionSummary-gutters css-1luoz50-MuiButtonBase-root-MuiAccordionSummary-root"
            data-gtm="{"id":"selector-accordion1","label":"product1","action":"Selector – Accordion"}"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content Accordion-summaryContent MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
            >
              <div>
                <div
                  class="MuiFormControl-root css-kbvs16-MuiFormControl-root"
                >
                  <label
                    class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                  >
                    <span
                      class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-root MuiCheckbox-colorPrimary css-17kltuc-MuiButtonBase-root-MuiCheckbox-root"
                    >
                      <input
                        aria-label="Select all documents for product name"
                        class="PrivateSwitchBase-input css-1m9pwf3"
                        data-indeterminate="false"
                        name="product-base-code"
                        type="checkbox"
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="CheckBoxOutlineBlankIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </span>
                  </label>
                </div>
              </div>
              <span
                class="css-1oh4pbz"
              >
                product name
              </span>
            </div>
            <div
              class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="ExpandMoreIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
              >
                <div
                  class="MuiAccordion-region"
                  role="region"
                >
                  <div
                    class="MuiAccordionDetails-root DocumentTechnicalTableResults-accordionDetails css-1r7u8wy-MuiAccordionDetails-root"
                  >
                    <a
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium css-1g897i8-MuiButtonBase-root-MuiButton-root"
                      data-gtm="{"id":"download1","label":"Download","action":"http://localhost:9000/document.pdf"}"
                      data-testid="document-table-download-application/pdf-button"
                      href="http://localhost:9000/document.pdf"
                      rel="noopener noreferrer"
                      tabindex="0"
                      target="_blank"
                    >
                      <span
                        class="MuiButton-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                      />
                      <p
                        class="css-1cigd93"
                      >
                        pim-code
                      </p>
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </a>
                    <div
                      class="css-16cnxgu"
                    >
                      <span
                        class="css-tgspdx"
                      >
                        MC: documentLibrary.headers.size
                        :
                      </span>
                      <span
                        class="css-jcllbd"
                        data-testid="tech-results-accordion-size-pim-document-id"
                      >
                        1 B
                      </span>
                    </div>
                    <div
                      class="css-1bvc4cc"
                    >
                      <div
                        class="MuiBox-root css-38zrbw"
                      >
                        <div
                          aria-label="MC: document.library.download.tooltip.title"
                          class=""
                          data-mui-internal-clone-element="true"
                          data-testid="tooltip"
                        >
                          <a
                            aria-label="Download pim document title"
                            class="MuiButtonBase-root MuiIconButton-root Button-root iconButton Button-small Button-text MuiIconButton-sizeLarge css-vt6g50-MuiButtonBase-root-MuiIconButton-root"
                            data-gtm="{"id":"download1","label":"Download","action":"http://localhost:9000/document.pdf"}"
                            data-testid="document-table-actions-download-pim-document-id"
                            href="http://localhost:9000/document.pdf"
                            rel="noopener noreferrer"
                            tabindex="0"
                            target="_blank"
                          >
                            <svg
                              class="css-afm3c7"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M19 20v-2H5v2Zm0-10h-4V4H9v6H5l7 7Z"
                                fill="currentColor"
                              />
                            </svg>
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </a>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root css-enhvy5"
                      >
                        <div
                          aria-label="MC: document.library.copyLink.tooltip.title"
                          class="MuiBox-root css-mvc5fa"
                          data-mui-internal-clone-element="true"
                          data-testid="tooltip"
                        >
                          <button
                            aria-label="Copy pim document title"
                            class="MuiButtonBase-root MuiIconButton-root Button-root iconButton Button-small Button-text MuiIconButton-sizeLarge css-vt6g50-MuiButtonBase-root-MuiIconButton-root"
                            data-testid="document-table-actions-copy-url-pim-document-id"
                            tabindex="0"
                            type="button"
                          >
                            <svg
                              class="css-afm3c7"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M15.0786 3.99902H6.86837C6.11356 4.0012 5.50221 4.6036 5.5 5.34736V14.7857H6.86837V5.34736H15.0786V3.99902ZM17.1327 6.69556H9.60665C8.85184 6.69794 8.24049 7.35835 8.23828 8.17373V18.5209C8.24049 19.3363 8.85184 19.9967 9.60665 19.9991H17.1327C17.8875 19.9967 18.4989 19.3363 18.5011 18.5209V8.17373C18.4989 7.35835 17.8875 6.69794 17.1327 6.69556ZM17.1315 18.521H9.60547V8.17383H17.1315V18.521Z"
                              />
                            </svg>
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiAccordionDetails-root DocumentTechnicalTableResults-accordionDetails css-1r7u8wy-MuiAccordionDetails-root"
                  >
                    <a
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium css-1g897i8-MuiButtonBase-root-MuiButton-root"
                      data-gtm="{"id":"download1","label":"Download","action":"http://localhost:9000/document.pdf"}"
                      data-testid="document-table-download-application/pdf-button"
                      href="http://localhost:9000/document.pdf"
                      rel="noopener noreferrer"
                      tabindex="0"
                      target="_blank"
                    >
                      <span
                        class="MuiButton-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                      />
                      <p
                        class="css-1cigd93"
                      >
                        pim-code
                      </p>
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </a>
                    <div
                      class="css-16cnxgu"
                    >
                      <span
                        class="css-tgspdx"
                      >
                        MC: documentLibrary.headers.size
                        :
                      </span>
                      <span
                        class="css-jcllbd"
                        data-testid="tech-results-accordion-size-pim-document-id"
                      >
                        1 B
                      </span>
                    </div>
                    <div
                      class="css-1bvc4cc"
                    >
                      <div
                        class="MuiBox-root css-38zrbw"
                      >
                        <div
                          aria-label="MC: document.library.download.tooltip.title"
                          class=""
                          data-mui-internal-clone-element="true"
                          data-testid="tooltip"
                        >
                          <a
                            aria-label="Download pim document title"
                            class="MuiButtonBase-root MuiIconButton-root Button-root iconButton Button-small Button-text MuiIconButton-sizeLarge css-vt6g50-MuiButtonBase-root-MuiIconButton-root"
                            data-gtm="{"id":"download1","label":"Download","action":"http://localhost:9000/document.pdf"}"
                            data-testid="document-table-actions-download-pim-document-id"
                            href="http://localhost:9000/document.pdf"
                            rel="noopener noreferrer"
                            tabindex="0"
                            target="_blank"
                          >
                            <svg
                              class="css-afm3c7"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M19 20v-2H5v2Zm0-10h-4V4H9v6H5l7 7Z"
                                fill="currentColor"
                              />
                            </svg>
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </a>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root css-enhvy5"
                      >
                        <div
                          aria-label="MC: document.library.copyLink.tooltip.title"
                          class="MuiBox-root css-mvc5fa"
                          data-mui-internal-clone-element="true"
                          data-testid="tooltip"
                        >
                          <button
                            aria-label="Copy pim document title"
                            class="MuiButtonBase-root MuiIconButton-root Button-root iconButton Button-small Button-text MuiIconButton-sizeLarge css-vt6g50-MuiButtonBase-root-MuiIconButton-root"
                            data-testid="document-table-actions-copy-url-pim-document-id"
                            tabindex="0"
                            type="button"
                          >
                            <svg
                              class="css-afm3c7"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M15.0786 3.99902H6.86837C6.11356 4.0012 5.50221 4.6036 5.5 5.34736V14.7857H6.86837V5.34736H15.0786V3.99902ZM17.1327 6.69556H9.60665C8.85184 6.69794 8.24049 7.35835 8.23828 8.17373V18.5209C8.24049 19.3363 8.85184 19.9967 9.60665 19.9991H17.1327C17.8875 19.9967 18.4989 19.3363 18.5011 18.5209V8.17373C18.4989 7.35835 17.8875 6.69794 17.1327 6.69556ZM17.1315 18.521H9.60547V8.17383H17.1315V18.521Z"
                              />
                            </svg>
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`MobileDocumentTechnicalTableResults component Renders correctly when not all products have all asset types 1`] = `
<body>
  <div>
    <div
      class="css-1blc44m"
    >
      <div
        class=" css-1u48ai"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-q3x8p3-MuiPaper-root-MuiAccordion-root"
          data-testid="tech-table-accordion-item-product-base-code"
        >
          <div
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot MuiAccordionSummary-gutters css-1luoz50-MuiButtonBase-root-MuiAccordionSummary-root"
            data-gtm="{"id":"selector-accordion1","label":"product1","action":"Selector – Accordion"}"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content Accordion-summaryContent MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
            >
              <div>
                <div
                  class="MuiFormControl-root css-kbvs16-MuiFormControl-root"
                >
                  <label
                    class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                  >
                    <span
                      class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-root MuiCheckbox-colorPrimary css-17kltuc-MuiButtonBase-root-MuiCheckbox-root"
                    >
                      <input
                        aria-label="Select all documents for product name"
                        class="PrivateSwitchBase-input css-1m9pwf3"
                        data-indeterminate="false"
                        name="product-base-code"
                        type="checkbox"
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="CheckBoxOutlineBlankIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </span>
                  </label>
                </div>
              </div>
              <span
                class="css-1oh4pbz"
              >
                product name
              </span>
            </div>
            <div
              class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="ExpandMoreIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
              >
                <div
                  class="MuiAccordion-region"
                  role="region"
                >
                  <div
                    class="MuiAccordionDetails-root DocumentTechnicalTableResults-accordionDetails css-1r7u8wy-MuiAccordionDetails-root"
                  >
                    <a
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium css-1g897i8-MuiButtonBase-root-MuiButton-root"
                      data-gtm="{"id":"download1","label":"Download","action":"http://localhost:9000/document.pdf"}"
                      data-testid="document-table-download-application/pdf-button"
                      href="http://localhost:9000/document.pdf"
                      rel="noopener noreferrer"
                      tabindex="0"
                      target="_blank"
                    >
                      <span
                        class="MuiButton-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                      />
                      <p
                        class="css-1cigd93"
                      >
                        asset-name
                      </p>
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </a>
                    <div
                      class="css-16cnxgu"
                    >
                      <span
                        class="css-tgspdx"
                      >
                        MC: documentLibrary.headers.size
                        :
                      </span>
                      <span
                        class="css-jcllbd"
                        data-testid="tech-results-accordion-size-pim-document-id"
                      >
                        1 B
                      </span>
                    </div>
                    <div
                      class="css-1bvc4cc"
                    >
                      <div
                        class="MuiBox-root css-38zrbw"
                      >
                        <div
                          aria-label="MC: document.library.download.tooltip.title"
                          class=""
                          data-mui-internal-clone-element="true"
                          data-testid="tooltip"
                        >
                          <a
                            aria-label="Download pim document title"
                            class="MuiButtonBase-root MuiIconButton-root Button-root iconButton Button-small Button-text MuiIconButton-sizeLarge css-vt6g50-MuiButtonBase-root-MuiIconButton-root"
                            data-gtm="{"id":"download1","label":"Download","action":"http://localhost:9000/document.pdf"}"
                            data-testid="document-table-actions-download-pim-document-id"
                            href="http://localhost:9000/document.pdf"
                            rel="noopener noreferrer"
                            tabindex="0"
                            target="_blank"
                          >
                            <svg
                              class="css-afm3c7"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M19 20v-2H5v2Zm0-10h-4V4H9v6H5l7 7Z"
                                fill="currentColor"
                              />
                            </svg>
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </a>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root css-enhvy5"
                      >
                        <div
                          aria-label="MC: document.library.copyLink.tooltip.title"
                          class="MuiBox-root css-mvc5fa"
                          data-mui-internal-clone-element="true"
                          data-testid="tooltip"
                        >
                          <button
                            aria-label="Copy pim document title"
                            class="MuiButtonBase-root MuiIconButton-root Button-root iconButton Button-small Button-text MuiIconButton-sizeLarge css-vt6g50-MuiButtonBase-root-MuiIconButton-root"
                            data-testid="document-table-actions-copy-url-pim-document-id"
                            tabindex="0"
                            type="button"
                          >
                            <svg
                              class="css-afm3c7"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M15.0786 3.99902H6.86837C6.11356 4.0012 5.50221 4.6036 5.5 5.34736V14.7857H6.86837V5.34736H15.0786V3.99902ZM17.1327 6.69556H9.60665C8.85184 6.69794 8.24049 7.35835 8.23828 8.17373V18.5209C8.24049 19.3363 8.85184 19.9967 9.60665 19.9991H17.1327C17.8875 19.9967 18.4989 19.3363 18.5011 18.5209V8.17373C18.4989 7.35835 17.8875 6.69794 17.1327 6.69556ZM17.1315 18.521H9.60547V8.17383H17.1315V18.521Z"
                              />
                            </svg>
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiAccordionDetails-root DocumentTechnicalTableResults-accordionDetails css-1r7u8wy-MuiAccordionDetails-root"
                  >
                    <a
                      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium css-1g897i8-MuiButtonBase-root-MuiButton-root"
                      data-gtm="{"id":"download1","label":"Download","action":"http://localhost:9000/document.pdf"}"
                      data-testid="document-table-download-application/pdf-button"
                      href="http://localhost:9000/document.pdf"
                      rel="noopener noreferrer"
                      tabindex="0"
                      target="_blank"
                    >
                      <span
                        class="MuiButton-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                      />
                      <p
                        class="css-1cigd93"
                      >
                        asset-name
                      </p>
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </a>
                    <div
                      class="css-16cnxgu"
                    >
                      <span
                        class="css-tgspdx"
                      >
                        MC: documentLibrary.headers.size
                        :
                      </span>
                      <span
                        class="css-jcllbd"
                        data-testid="tech-results-accordion-size-pim-document-id"
                      >
                        1 B
                      </span>
                    </div>
                    <div
                      class="css-1bvc4cc"
                    >
                      <div
                        class="MuiBox-root css-38zrbw"
                      >
                        <div
                          aria-label="MC: document.library.download.tooltip.title"
                          class=""
                          data-mui-internal-clone-element="true"
                          data-testid="tooltip"
                        >
                          <a
                            aria-label="Download pim document title"
                            class="MuiButtonBase-root MuiIconButton-root Button-root iconButton Button-small Button-text MuiIconButton-sizeLarge css-vt6g50-MuiButtonBase-root-MuiIconButton-root"
                            data-gtm="{"id":"download1","label":"Download","action":"http://localhost:9000/document.pdf"}"
                            data-testid="document-table-actions-download-pim-document-id"
                            href="http://localhost:9000/document.pdf"
                            rel="noopener noreferrer"
                            tabindex="0"
                            target="_blank"
                          >
                            <svg
                              class="css-afm3c7"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M19 20v-2H5v2Zm0-10h-4V4H9v6H5l7 7Z"
                                fill="currentColor"
                              />
                            </svg>
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </a>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root css-enhvy5"
                      >
                        <div
                          aria-label="MC: document.library.copyLink.tooltip.title"
                          class="MuiBox-root css-mvc5fa"
                          data-mui-internal-clone-element="true"
                          data-testid="tooltip"
                        >
                          <button
                            aria-label="Copy pim document title"
                            class="MuiButtonBase-root MuiIconButton-root Button-root iconButton Button-small Button-text MuiIconButton-sizeLarge css-vt6g50-MuiButtonBase-root-MuiIconButton-root"
                            data-testid="document-table-actions-copy-url-pim-document-id"
                            tabindex="0"
                            type="button"
                          >
                            <svg
                              class="css-afm3c7"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M15.0786 3.99902H6.86837C6.11356 4.0012 5.50221 4.6036 5.5 5.34736V14.7857H6.86837V5.34736H15.0786V3.99902ZM17.1327 6.69556H9.60665C8.85184 6.69794 8.24049 7.35835 8.23828 8.17373V18.5209C8.24049 19.3363 8.85184 19.9967 9.60665 19.9991H17.1327C17.8875 19.9967 18.4989 19.3363 18.5011 18.5209V8.17373C18.4989 7.35835 17.8875 6.69794 17.1327 6.69556ZM17.1315 18.521H9.60547V8.17383H17.1315V18.521Z"
                              />
                            </svg>
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`MobileDocumentTechnicalTableResults component Renders correctly when only single documents are present for asset types 1`] = `
<body>
  <div>
    <div
      class="css-1blc44m"
    >
      <div
        class=" css-1u48ai"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-q3x8p3-MuiPaper-root-MuiAccordion-root"
          data-testid="tech-table-accordion-item-product-base-code"
        >
          <div
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot MuiAccordionSummary-gutters css-1luoz50-MuiButtonBase-root-MuiAccordionSummary-root"
            data-gtm="{"id":"selector-accordion1","label":"product1","action":"Selector – Accordion"}"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content Accordion-summaryContent MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
            >
              <div>
                <div
                  class="MuiFormControl-root css-kbvs16-MuiFormControl-root"
                >
                  <label
                    class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                  >
                    <span
                      class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-root MuiCheckbox-colorPrimary css-17kltuc-MuiButtonBase-root-MuiCheckbox-root"
                    >
                      <input
                        aria-label="Select all documents for product name"
                        class="PrivateSwitchBase-input css-1m9pwf3"
                        data-indeterminate="false"
                        name="product-base-code"
                        type="checkbox"
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="CheckBoxOutlineBlankIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                      <span
                        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                      />
                    </span>
                  </label>
                </div>
              </div>
              <span
                class="css-1oh4pbz"
              >
                product name
              </span>
            </div>
            <div
              class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="ExpandMoreIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
              >
                <div
                  class="MuiAccordion-region"
                  role="region"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
